Created DeviceRequest and DeviceSearchCriteria classes to avoid using of Model object in requests. Improved validation of new device creation to not throw wrong exception. Created MissingFieldsException to improve validation. Changed Patch for Put in updating of devices. Removed duplicated exceptions (in Controller and Service classes) Removed endpoints for searching by state and brand. Created new unique endpoint to search by criteria. Rewritten test cases