@@ -1,9 +1,10 @@
 // src/test/java/com/glaydson/devicesapi/controller/DeviceControllerTest.java
 package com.glaydson.devicesapi.controller;
 
+import com.glaydson.devicesapi.dto.DeviceRequest;
+import com.glaydson.devicesapi.dto.DeviceSearchCriteria;
 import com.glaydson.devicesapi.exception.DeviceInUseException;
 import com.glaydson.devicesapi.exception.GlobalExceptionHandler;
-import com.glaydson.devicesapi.exception.InvalidDeviceStateException;
 import com.glaydson.devicesapi.exception.ResourceNotFoundException;
 import com.glaydson.devicesapi.model.Device;
 import com.glaydson.devicesapi.repository.DeviceRepository;
@@ -18,8 +19,7 @@ import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.Optional;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
@@ -31,6 +31,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 class DeviceControllerTest {
 
+    public static final String BASE_PATH = "/api/v1/devices";
     private MockMvc mockMvc;
 
     @Mock
@@ -42,8 +43,8 @@ class DeviceControllerTest {
     @InjectMocks
     private DeviceController deviceController;
 
-    private Device device;
-    private Device device2;
+    private DeviceRequest device1;
+    private DeviceRequest device2;
 
     @BeforeEach
     void setUp() {
@@ -51,15 +52,16 @@ class DeviceControllerTest {
         mockMvc = MockMvcBuilders.standaloneSetup(deviceController)
                 .setControllerAdvice(new GlobalExceptionHandler())
                 .build();
-        device = new Device(1L, "Device1", "Brand1", Device.State.AVAILABLE, LocalDateTime.now());
-        device2 = new Device(2L, "Device2", "Brand2", Device.State.IN_USE, LocalDateTime.now());
+        device1 = new DeviceRequest("Device1", "Brand1", Device.State.AVAILABLE);
+        device2 = new DeviceRequest("Device2", "Brand2", Device.State.IN_USE);
     }
 
     @Test
     void testCreateDevice() throws Exception {
-        when(deviceService.createDevice(any(Device.class))).thenReturn(device);
+        Device device = new Device(1L, device1.getName(), device1.getBrand(), device1.getState(), LocalDateTime.now());
+        when(deviceService.createDevice(any(DeviceRequest.class))).thenReturn(device);
 
-        mockMvc.perform(post("/api/devices")
+        mockMvc.perform(post(BASE_PATH)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content("{\"name\":\"Device1\",\"brand\":\"Brand1\",\"state\":\"AVAILABLE\"}"))
                 .andExpect(status().isOk())
@@ -69,9 +71,11 @@ class DeviceControllerTest {
 
     @Test
     void testGetDeviceById() throws Exception {
-        when(deviceService.getDeviceById(anyLong())).thenReturn(Optional.of(device));
+        Device device = new Device(1L, device1.getName(), device1.getBrand(), device1.getState(), LocalDateTime.now());
 
-        mockMvc.perform(get("/api/devices/1")
+        when(deviceService.getDeviceById(anyLong())).thenReturn(device);
+
+        mockMvc.perform(get(BASE_PATH + "/1")
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.name").value("Device1"))
@@ -80,9 +84,10 @@ class DeviceControllerTest {
 
     @Test
     void testGetDeviceByIdNotFound() throws Exception {
-        when(deviceService.getDeviceById(anyLong())).thenReturn(Optional.empty());
 
-        mockMvc.perform(get("/api/devices/1")
+        when(deviceService.getDeviceById(anyLong())).thenThrow(ResourceNotFoundException.class);
+
+        mockMvc.perform(get(BASE_PATH + "/1")
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isNotFound())
                 .andExpect(result -> assertInstanceOf(ResourceNotFoundException.class, result.getResolvedException()));
@@ -90,9 +95,10 @@ class DeviceControllerTest {
 
     @Test
     void testGetAllDevices() throws Exception {
-        when(deviceService.getAllDevices()).thenReturn(Arrays.asList(device));
+        Device device = new Device(1L, device1.getName(), device1.getBrand(), device1.getState(), LocalDateTime.now());
+        when(deviceService.getAllDevices()).thenReturn(List.of(device));
 
-        mockMvc.perform(get("/api/devices")
+        mockMvc.perform(get(BASE_PATH)
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$[0].name").value("Device1"))
@@ -100,39 +106,40 @@ class DeviceControllerTest {
     }
 
     @Test
-    void testUpdateDevice() throws Exception {
-        when(deviceService.getDeviceById(anyLong())).thenReturn(Optional.of(device));
-        Device expectedDevice = new Device(1L, "UpdatedName", "Brand1", Device.State.AVAILABLE, device.getCreationTime());
-        when(deviceService.updateDevice(anyLong(), any(Device.class))).thenReturn(expectedDevice);
+    void testSearchByBrandAndState() throws Exception {
+        Device device = new Device(1L, device1.getName(), device1.getBrand(), device1.getState(), LocalDateTime.now());
+        when(deviceService.getDevicesByCriteria(any(DeviceSearchCriteria.class))).thenReturn(List.of(device));
 
-        mockMvc.perform(patch("/api/devices/1")
+        mockMvc.perform(get(BASE_PATH + "/search")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"name\":\"UpdatedName\",\"brand\":\"Brand1\",\"state\":\"AVAILABLE\"}"))
+                        .content("{\"brand\":\"Brand1\",\"state\":\"AVAILABLE\"}"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.name").value("UpdatedName"))
-                .andExpect(jsonPath("$.brand").value("Brand1"));
+                .andExpect(jsonPath("$[0].name").value("Device1"))
+                .andExpect(jsonPath("$[0].brand").value("Brand1"));
     }
 
     @Test
-    void testUpdateDeviceCreationTime() throws Exception {
+    void testUpdateDevice() throws Exception {
+        Device expectedDevice = new Device(1L, "UpdatedName", "Brand2", Device.State.AVAILABLE, LocalDateTime.now());
         Device existingDevice = new Device(1L, "Device1", "Brand1", Device.State.AVAILABLE, LocalDateTime.now());
-        when(deviceService.getDeviceById(anyLong())).thenReturn(Optional.of(existingDevice));
-        when(deviceService.updateDevice(anyLong(), any(Device.class))).thenThrow(new InvalidDeviceStateException("Creation time cannot be updated"));
+        when(deviceService.getDeviceById(anyLong())).thenReturn(existingDevice);
+        when(deviceService.updateDevice(anyLong(), any(DeviceRequest.class))).thenReturn(expectedDevice);
 
-        mockMvc.perform(patch("/api/devices/1")
+        mockMvc.perform(put(BASE_PATH + "/1")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"name\":\"Device1\",\"brand\":\"Brand1\",\"state\":\"AVAILABLE\",\"creationTime\":\"" + LocalDateTime.now().plusDays(1) + "\"}"))
-                .andExpect(status().isBadRequest())
-                .andExpect(result -> assertInstanceOf(InvalidDeviceStateException.class, result.getResolvedException()));
+                        .content("{\"name\":\"UpdatedName\",\"brand\":\"Brand2\",\"state\":\"AVAILABLE\"}"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.name").value("UpdatedName"))
+                .andExpect(jsonPath("$.brand").value("Brand2"));
     }
 
     @Test
     void testUpdateDeviceInUse() throws Exception {
         Device existingDevice = new Device(1L, "Device1", "Brand1", Device.State.IN_USE, LocalDateTime.now());
-        when(deviceService.getDeviceById(anyLong())).thenReturn(Optional.of(existingDevice));
-        when(deviceService.updateDevice(anyLong(), any(Device.class))).thenThrow(new DeviceInUseException("Name and brand cannot be updated if the device is in use"));
+        when(deviceService.getDeviceById(anyLong())).thenReturn(existingDevice);
+        when(deviceService.updateDevice(anyLong(), any(DeviceRequest.class))).thenThrow(new DeviceInUseException("Name and brand cannot be updated if the device is in use"));
 
-        mockMvc.perform(patch("/api/devices/1")
+        mockMvc.perform(put(BASE_PATH + "/1")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content("{\"name\":\"Device1\",\"brand\":\"New Brand\",\"state\":\"IN_USE\",\"creationTime\":\"" + existingDevice.getCreationTime() + "\"}"))
                 .andExpect(status().isBadRequest())
@@ -141,10 +148,11 @@ class DeviceControllerTest {
 
     @Test
     void testDeleteDeviceInUse() throws Exception {
-        when(deviceService.getDeviceById(anyLong())).thenReturn(Optional.of(device2));
+        Device existingDevice = new Device(1L, "Device1", "Brand1", Device.State.IN_USE, LocalDateTime.now());
+        when(deviceService.getDeviceById(anyLong())).thenReturn(existingDevice);
         doThrow(new DeviceInUseException("Devices in use cannot be removed")).when(deviceService).deleteDevice(anyLong());
 
-        mockMvc.perform(delete("/api/devices/2")
+        mockMvc.perform(delete(BASE_PATH + "/2")
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isBadRequest())
                 .andExpect(result -> assertInstanceOf(DeviceInUseException.class, result.getResolvedException()));
